# mac

./: .env.example  .gitignore  QUICKSTART_GUIDE.md  README.md  main.py  pyproject.toml
admin_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-api.html  vite.config.js
admin_frontend/src/: App.jsx  index.css
admin_frontend/src/components/: Layout.jsx  Sidebar.jsx
admin_frontend/src/pages/: Categories.jsx  Dashboard.jsx  Orders.jsx  Products.jsx  Sections.jsx  SiteConfig.jsx
admin_frontend/src/services/: api.js
app/: __init__.py  main.py
app/api/v1/: api.py
app/core/: config.py  exceptions.py  logging.py
app/db/: __init__.py  schema.py  weaviate_client.py
app/models/: __init__.py  category.py  common.py  order.py  product.py  section.py  site_config.py
app/services/: category_service.py  order_service.py  product_service.py  section_service.py  site_config_service.py
app/utils/: helpers.py
deployment/: README.md  deploy_backend.sh  setup_weaviate.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: test.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  ProductCard.tsx
frontend/src/pages/: Cart.tsx  Checkout.tsx  Home.tsx  OrderConfirmation.tsx  ProductDetails.tsx  Search.tsx  Shop.tsx
frontend/src/services/: api.ts
frontend/src/store/: cartStore.ts
scripts/: init_db.py  populate_sample_data.py  seed_data.py  test_all_endpoints.sh  test_api.py
tests/: __init__.py
(+7 files in other folders)
